--- a/OnlineNotepad/Views/Shared/Login.cshtml
+++ b/OnlineNotepad/Views/Shared/Login.cshtml
@@ -14,7 +14,7 @@
             <div>
                 <input type="submit" value="Войти" />
                 <a href="#">Забыли пароль?</a>
-                <a asp-action="Register" asp-controller="Notes">Регистрация</a>
+                <a asp-action="Register" asp-controller="Account">Регистрация</a>
             </div>
         </form><!-- form -->
     </section><!-- content -->
