--- a/OnlineNotepad/Views/Shared/LayoutPartial/HeaderPartial.cshtml
+++ b/OnlineNotepad/Views/Shared/LayoutPartial/HeaderPartial.cshtml
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#"></a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Login" asp-controller="Notes" class="nav-link">ВОЙТИ / РЕГИСТРАЦИЯ</a>
+                        <a asp-action="Login" asp-controller="Account" class="nav-link">ВОЙТИ / РЕГИСТРАЦИЯ</a>
                     </li>
                 }
             </ul>
