--- a/OnlineNotepad/Views/Shared/Register.cshtml
+++ b/OnlineNotepad/Views/Shared/Register.cshtml
@@ -11,6 +11,9 @@
                 <div>
                     <input asp-for="Password" asp-validation-for="Password" type="password" placeholder="пароль" required="" id="password" />
                 </div>
+                <div>
+                    <input asp-for="PasswordConfirm" asp-validation-for="PasswordConfirm" type="password" placeholder="подтвердить пароль" required="" id="password" />
+                </div>
                 <div class="inputButton">
                     <input type="submit" value="Зарегистрироваться" style="height:40px; width:290px" />
                 </div>
@@ -21,5 +24,6 @@
 <style>
     .inputButton {
         margin-left:20px;
+        margin-top:-10px;
     }
 </style>
