--- a/OnlineNotepad/Views/Notes/List.cshtml
+++ b/OnlineNotepad/Views/Notes/List.cshtml
@@ -15,14 +15,18 @@
     if (p.UserId == currentUserId)
     {
         <div class="buttonsfornote">
-            <button type="button" class="btn btn-nones">
+            <a asp-controller="Notes" asp-action="EditNote" asp-route-noteId="@p.Id" class ="btn btn-nones" >    
                 <div class="btn__container">
                     <div class="btn__body">
                         <div class="btn__text" id="note_name">@p.Name</div>
                         <div class="btn__date">@p.DateOfCreation</div>
                     </div>
                 </div>
-            </button>
+            </a>
         </div>
     }
 }
+
+<script>
+
+</script>
